--- a/Bezier/index.html
+++ b/Bezier/index.html
@@ -8,8 +8,7 @@
                 overflow: hidden;
             }
         </style>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
-        <script src="./sketch.js"></script>
+        <script src="./sketch.js" type="module"></script>
         <title>Bezier</title>
     </head>
 
