--- a/Fourier/index.html
+++ b/Fourier/index.html
@@ -6,9 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Fourier</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/svg.js/3.0.13/svg.js" integrity="sha256-SbaK8OY+scYVgjfb8SSK9hgQgBqFVNUBXmXAjGvjk08=" crossorigin="anonymous"></script>
-        <script src="./fourier.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+        <script src="./fourier.js" type="module"></script>
         <style>
             body {
                 display: flex;
@@ -29,7 +27,7 @@
     <body>
         <div>
             <span>Follow <input id="followBox" type="checkbox"></span>
-            <span>Speed <input id="speedSlider" type="range" min="0.00001" max="0.001" step="0.00001" value="0.001"> </span>
+            <span>Speed <input id="speedSlider" type="range" min="0.00001" max="0.001" step="0.00001" value="0.0005"> </span>
         </div>
     </body>
 
