--- a/Maze/index.html
+++ b/Maze/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Maze</title>
-        <script src="Maze.js"></script>
+        <script src="Maze.js" type="module"></script>
         <style>
             body {
                 margin: 0;
@@ -15,8 +15,6 @@
         </style>
     </head>
 
-    <body>
-        <canvas id="canvas"></canvas>
-    </body>
+    <body></body>
 
 </html>
