--- a/ODE/index.html
+++ b/ODE/index.html
@@ -3,8 +3,7 @@
 
     <head>
         <meta charset="UTF-8">
-        <script src="index.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.js"></script>
+        <script src="index.js" type="module"></script>
         <style>
             body {
                 margin: 0;
