--- a/boids/index.html
+++ b/boids/index.html
@@ -8,12 +8,43 @@
                 background-color: black;
                 overflow: hidden;
             }
+
+            #box {
+                position: absolute;
+                color: white;
+
+                bottom: 0;
+
+                display: flex;
+                justify-content: center;
+                width: 100%;
+            }
+
+            .asdf {
+                text-align: center;
+            }
         </style>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
         <title>Boids</title>
+        <script src="index.js" type="module"></script>
     </head>
+
     <body>
-        <script src="index.js"></script>
+        <div id="box">
+            <div class="asdf"><input id="sep" type="range"><br>Separation</div>
+            <div class="asdf"><input id="align" type="range"><br>Alignment</div>
+            <div class="asdf"><input id="coh" type="range"><br>Cohesion</div>
+            <div class="asdf"><input id="range" type="range"><br>Visual Range</div>
+            <table>
+                <tr>
+                    <td>Draw Velocity:</td>
+                    <td><input id="dVel" type="checkbox"><br></td>
+                </tr>
+                <tr>
+                    <td>Draw Acceleration:</td>
+                    <td><input id="dAcc" type="checkbox"><br></td>
+                </tr>
+            </table>
+        </div>
     </body>
 
 </html>
