fixed wrong file names

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div><a href="./Sorting">Sorting Visualization</a></div>
             </li>
             <li>
-                <div><a href="./Ant.html">Langton's ant</a></div>
+                <div><a href="./ant.html">Langton's ant</a></div>
             </li>
             <li>
                 <div>
@@ -110,7 +110,7 @@
                 </div>
             </li>
             <li>
-                <div><a href="./Bifurcation.html">Logistic map</a></div>
+                <div><a href="./bifurcation.html">Logistic map</a></div>
             </li>
             <li>
                 <div><a href="./clock.html">Clock</a></div>
